<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/search_way" >

    <Button
        android:id="@+id/btnSearchLocally"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:text="@string/search_locally" />

    <Button
        android:id="@+id/btnSearchOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSearchLocally"
        android:layout_alignRight="@+id/btnSearchLocally"
        android:layout_below="@+id/btnSearchLocally"
        android:layout_marginTop="30dp"
        android:text="@string/search_online" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSearchOnline"
        android:layout_alignRight="@+id/btnSearchOnline"
        android:layout_below="@+id/btnSearchOnline"
        android:layout_marginTop="30dp"
        android:text="@string/btn_about" />

</RelativeLayout>